
2011-08-23
- po/ru.po: Added missing translations. Contributed by Dima Sobolev. (VRI)

2011-08-24
- vdi/vdi_col.c: Fixed the default VDI palette. (VRI)

2011-08-26
- aes/geminit.c, aes/gempd.c, aes/gempd.h, aes/gemshlib.c, aes/struct.h:
  Improved rsrc_load() and shel_find() to search also in the application
  directory and the root directory. This fxes the Nethack game. (VRI)

2011-08-30
- bdos/bios.h, bios/blkdev.h, cli/command.c, include/bpb.h: Centralize
  definition of BPB. Contributed by Roger Burrows. (VRI)
- bdos/fs.h, bdos/fsbuf.c, bdos/fsdir.c, bdos/fsdrive.c, bdos/fsfat.c,
  bdos/fsio.c: Big partition support part 2. Eliminate the usage of negative
  cluster numbers and enable big partitions. Contributed by Roger Burrows. (VRI)
- vdi/vdi_tblit.S, vdi/vdi_tblit_cf.S: Minor addq.w fix. (VRI)
- Makefile, vdi/vdi_tblit_cf.S: Fixed missed optimization by gas on ColdFire
  from 0(sp) to simply (sp). (VRI)
- Makefile: More genericity to rebuild the ColdFire PortAsm sources. (VRI)

2011-08-31
- bdos/fsfat.c: Fixed freespace calculation. Contributed by Roger Burrows. (VRI)
- bdos/blkdev.c: Fixed Getbpb() number of clusters on MS-DOS-style partitions
  > 32MB. Contributed by Roger Burrows. (VRI)

2011-09-04
- vdi/vdi_bezier.c, vdi/vdi_col.c, vdi/vdi_control.c, vdi/vdi_defs.h,
  vdi/vdi_esc.c, vdi/vdi_fill.c, vdi/vdi_gdp.c, vdi/vdi_line.c, vdi/vdi_main.c,
  vdi/vdi_mouse.c, vdi/vdi_text.c: Added static and const where relevant.
  Contributed by Eero Tamminen. (VRI)
- desk/deskdir.c: Make EmuTOS check the "Confirm overwrites" option when copying
  a file from one directory to another. Contributed by Roger Burrows. (VRI)
- vdi/vdi_defs.h, vdi/vdi_line.c: Faster arrow drawing. Contributed by Eero
  Tamminen. (VRI)
- vdi/vdi_mouse.c: Fixed potential strict aliasing issue. Suggested by Eero
  Tamminen. (VRI)
- vdi/vdi_control.c, vdi/vdi_defs.h, vdi/vdi_fill.c, vdi/vdi_line.c: Added more
  constness. (VRI)